onto the teensy41 at 600MHz, b4 bed

--- a/code_many/platformio.ini
+++ b/code_many/platformio.ini
@@ -47,6 +47,7 @@ board = teensy40
 platform = teensy
 board = teensy41
 upload_protocol = teensy-cli
+build_flags= -DTEENSY
 
 [env:teensymm]
 platform = teensy
