added teensy and nrf52840, notes

--- a/code_many/platformio.ini
+++ b/code_many/platformio.ini
@@ -8,14 +8,18 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 [env]
 framework = arduino
-lib_deps=
-    ;paulstoffregen/TimerOne@^1.1
-    https://github.com/PaulStoffregen/TimerOne.git
+;lib_deps=
+;    ;paulstoffregen/TimerOne@^1.1
+;    https://github.com/PaulStoffregen/TimerOne.git
+;build_src_filter=-<main_dbg.cpp>
+;build_src_filter=+<main.cpp>
 
 [env:a-star32U4]
 platform = atmelavr
 board = a-star32U4
 framework = arduino
+;lib_deps=
+    ;paulstoffregen/TimerOne@^1.1
 
 [env:digispark-tiny]
 platform = atmelavr
@@ -24,6 +28,18 @@ board = digispark-tiny
 [env:disco_f746ng]
 platform = ststm32
 board = disco_f746ng
+
+; adafruit_feather_nrf52840
+[env:feather52840]
+platform = nordicnrf52
+board = adafruit_feather_nrf52840
+framework = arduino
+lib_deps = 
+	adafruit/Adafruit BusIO@^1.11.3
+build_flags= -DNRF52840
+;upload_protocol = blackmagic
+
+
 
 [env:micro]
 platform = atmelavr
@@ -47,7 +63,11 @@ board = teensy40
 platform = teensy
 board = teensy41
 upload_protocol = teensy-cli
+lib_deps=
+    ;paulstoffregen/TimerOne@^1.1
+    https://github.com/PaulStoffregen/TimerOne.git
 build_flags= -DTEENSY
+        -DUSE_TIMER1
 
 [env:teensymm]
 platform = teensy
