build for artemis (sparkfun)

--- a/code_many/platformio.ini
+++ b/code_many/platformio.ini
@@ -6,13 +6,11 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
+
+
 [env]
 framework = arduino
-;lib_deps=
-;    ;paulstoffregen/TimerOne@^1.1
-;    https://github.com/PaulStoffregen/TimerOne.git
-;build_src_filter=-<main_dbg.cpp>
-;build_src_filter=+<main.cpp>
+monitor_speed=9600
 
 [env:a-star32U4]
 platform = atmelavr
@@ -21,15 +19,23 @@ framework = arduino
 ;lib_deps=
     ;paulstoffregen/TimerOne@^1.1
 
-[env:digispark-tiny]
-platform = atmelavr
-board = digispark-tiny
+[env:artemis]
+platform = apollo3blue
+board = SparkFun_MicroMod_Artemis_Processor
+framework = ${env.framework}
+;upload_port = /dev/ttyUSB0
+upload_speed = 115200
+;lib_deps = ${common_env_data.lib_deps}
+build_flags = -DSPARKFUN_ARTEMIS
+;${common_env_data.build_flags}
+monitor_speed = ${env.monitor_speed}
+lib_deps = 
+	adafruit/Adafruit BusIO@^1.11.3
 
 [env:disco_f746ng]
 platform = ststm32
 board = disco_f746ng
 
-; adafruit_feather_nrf52840
 [env:feather52840]
 platform = nordicnrf52
 board = adafruit_feather_nrf52840
@@ -39,16 +45,6 @@ lib_deps =
 build_flags= -DNRF52840
 ;upload_protocol = blackmagic
 
-
-
-[env:micro]
-platform = atmelavr
-board = micro
-
-[env:nano_33_iot]
-board = nano_33_iot
-platform = atmelsam
-upload_speed = 115200
 
 [env:pico]
 platform = https://github.com/platformio/platform-raspberrypi.git
